fixed popover sometimes overlaped by another element

--- a/www/assets/css/toolduck.css
+++ b/www/assets/css/toolduck.css
@@ -191,6 +191,7 @@ body {
 }
 
 .popover {
+	z-index: 100;
 	animation: fade 0.2s;
 	position: absolute;
 	background-color: #131420;
